@startuml

namespace Yacare.BaseBundle.Entity  {
	class Persona <<class>> {
		+Nombre
		+Apellido
		+RazonSocial
		+NombreVisible
		+Grupos
		+Roles		
		+UsuarioRoles
		+Username
		+Password
		+Salt
		+DocumentoTipo
		+DocumentoNumero
		+Cuilt
		+TelefonoNumero
		+Email
		+SituacionTributaria
		+FechaNacimiento
		+Genero
		+EstadoCivil
		+Pais
		+Nib
		+TipoSociedad
	}

	class PersonaGrupo <<class>> {
		+Nombre
	}
	
	class Pais << class >> {
		+Nombre
	}
	class ConDomicilio <<(T,#FF7700) trait>> {
		+DomicilioCalle
		+DomicilioCalleNombre
		+DomicilioNumero
		+DomicilioPiso
		+DomicilioPuerta
		+getDomicilio()
	}
	
	class Dispositivo <<class>> {
		+Marca
		+Modelo
		+IdentificadorUnico
		+NumeroSerie
		+Sector
		+Encargado
		+Firmware
	}
	
	Persona ..|> ConDomicilio : implementa
	Persona "0..1" o-- "1" Pais : Nacionalidad
	Persona "1" o-- "0..n" PersonaGrupo : pertenece
	Persona "1" o-- "0..n" Tapir.BaseBundle.Entity.PersonaRol : pertenece
	
	Dispositivo "1..0" o-- "1" Persona : Encargado

}

@enduml
